--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
 
         </div>
 
-        <p class="end">Design by<span><i class="fa-solid fa-face-grin"></i> HEMANTH V</span></p>
+        <p class="end">Design by<span><i class="fa-solid fa-face-grin"></i> VARSHA C</span></p>
 
     </footer>
 
