--- a/sell.html
+++ b/sell.html
@@ -17,11 +17,11 @@
             </div>
 
             <ul>
-                <li><a href="#Home">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#About">About</a></li>
                 <li><a href="#Menu">Cars</a></li>
                 <li><a href="#Gallary">Gallary</a></li>
-                <li><a href="#sell">Sell</a></li>
+                <li><a href="sell.html">Sell</a></li>
                 <li><a href="#Order">Book</a></li>
             </ul>
 
