--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <li><a href="#About">About</a></li>
                 <li><a href="#Menu">Cars</a></li>
                 <li><a href="#Gallary">Gallary</a></li>
+                 <li><a href="sell.html">Gallary</a></li>
                 <li><a href="#Order">Book</a></li>
             </ul>
 
